# crocking

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crocking/: __init__.py  __main__.py  core.py
tests/: test_crocking.py
