[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "crocking"
version = "0.1.0"
description = "Crocking — AI authorship detector for git repositories. Analyzes commit history for statistical signatures of undisclosed AI-generated code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "goweft", email = "goweft@proton.me" },
]
keywords = [
    "security", "ai", "git", "authorship", "attribution", "detection",
    "compliance", "licensing", "scanner",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/goweft/crocking"
Repository = "https://github.com/goweft/crocking"
Issues = "https://github.com/goweft/crocking/issues"

[project.scripts]
crocking = "crocking:main"

[tool.setuptools.packages.find]
where = ["src"]
